--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -185,4 +185,26 @@ footer nav ul {
 	justify-content: flex-end;
 	margin: 2em
 }
+/** **/
+.categories {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+.categories button {
+    border: 2px solid #1D6154;
+    background-color: #f8f8f2;
+    color: #1D6154;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+	font-weight: bold;
+    transition: all 0.3s ease;
+}
+.categories button.active,
+.categories button:hover {
+    background-color: #1D6154;
+    color: #ffffff;
+}
 
